[package]
name = "apns_notifyd"
version = "0.1.0"
authors = ["Umang Raghuvanshi <u@umangis.me>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
log = "0.4.11"
serde = "1.0.116"
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["full"] }
sled = "0.34.4"
anyhow = "1.0.33"
syslog = "5.0.0"

